Remove unused dependencies and update README for virtual environment setup

--- a/notebooks/CS164_Final.ipynb
+++ b/notebooks/CS164_Final.ipynb
@@ -467,23 +467,23 @@
     "    \"Capacity\": [4300, 1300, 2000, 2700],\n",
     "    \"Variable_Cost\": [30, 25, 15, 15],  # Cost per ton processed in USD\n",
     "    \"Fixed_Cost\": [700, 500, 550, 600],  # Fixed cost in USD\n",
-    "    \"Effectiveness\": [0.8, 0.4, 0.5, 0.1], # Efficiency in reducing waste\n",
+    "    \"Effectiveness\": [0.8, 0.4, 0.5, 0.1],  # Efficiency in reducing waste\n",
     "    \"CO2_Rate\": [-0.05, -0.5, -0.6, -0.2],  # CO2 avoided per ton reduced\n",
     "    \"Emission\": [1.5, 0.5, 0.2, 1.0],  # CO2 emitted per ton processed\n",
-    "    \"Sorting_Interaction\": [1.1, 1.5, 1.5, 1.0], # How sorting affects effectiveness\n",
+    "    \"Sorting_Interaction\": [1.1, 1.5, 1.5, 1.0],  # How sorting affects effectiveness\n",
     "}\n",
     "\n",
     "# Problem parameters\n",
     "W = 7500  # Total waste generated in tons/day\n",
-    "B = 150_000 # 8000 billion VND for 10 years at 26,000 VND/USD\n",
+    "B = 150_000  # 8000 billion VND for 10 years at 26,000 VND/USD\n",
     "\n",
     "# Objective weights\n",
     "w1 = 0.6\n",
-    "w2 = 1-w1\n",
+    "w2 = 1 - w1\n",
     "\n",
     "# Convert dictionary to DataFrame for display\n",
     "data_df = pd.DataFrame(data)\n",
-    "data_df\n"
+    "data_df"
    ]
   },
   {
@@ -601,7 +601,7 @@
     }
    ],
    "source": [
-    "with_sorting = True # Adjustable\n",
+    "with_sorting = True  # Adjustable\n",
     "\n",
     "# Decision variables\n",
     "x = cp.Variable(data_df.shape[0], nonneg=True)  # Tons/day for each strategy\n",
@@ -613,13 +613,19 @@
     "emission_rate = np.array(data[\"Emission\"])\n",
     "variable_cost = np.array(data[\"Variable_Cost\"])\n",
     "fixed_cost = np.array(data[\"Fixed_Cost\"])\n",
-    "sorting_interaction = np.array(data[\"Sorting_Interaction\"]) if with_sorting else np.ones_like(effectiveness) \n",
+    "sorting_interaction = (\n",
+    "    np.array(data[\"Sorting_Interaction\"])\n",
+    "    if with_sorting\n",
+    "    else np.ones_like(effectiveness)\n",
+    ")\n",
     "\n",
-    "min_capa_rates = np.array([0.0, 0.4, 0.4, 0.0]) # Adjustable\n",
-    "max_capa_rates = np.array([1.0, 1.2, 1.2, 1.0]) # Adjustable\n",
+    "min_capa_rates = np.array([0.0, 0.4, 0.4, 0.0])  # Adjustable\n",
+    "max_capa_rates = np.array([1.0, 1.2, 1.2, 1.0])  # Adjustable\n",
     "\n",
     "# Objective functions\n",
-    "waste_reduction_func = x @ (effectiveness * co2_rate * sorting_interaction)  # CO2 avoided\n",
+    "waste_reduction_func = x @ (\n",
+    "    effectiveness * co2_rate * sorting_interaction\n",
+    ")  # CO2 avoided\n",
     "co2_emissions_func = x @ emission_rate  # CO2 emitted\n",
     "objective = w1 * waste_reduction_func - w2 * co2_emissions_func\n",
     "\n",
@@ -641,9 +647,13 @@
     "if problem.status == \"infeasible\":\n",
     "    print(\"Problem is infeasible. Consider relaxing budget or capacity constraints.\")\n",
     "elif problem.status == \"optimal_inaccurate\":\n",
-    "    print(\"Problem is solved but the solution may be inaccurate. Consider checking the results.\")\n",
+    "    print(\n",
+    "        \"Problem is solved but the solution may be inaccurate. Consider checking the results.\"\n",
+    "    )\n",
     "elif problem.status == \"unbounded\":\n",
-    "    print(\"Problem is unbounded. Consider adding constraints or adjusting the problem formulation.\")\n",
+    "    print(\n",
+    "        \"Problem is unbounded. Consider adding constraints or adjusting the problem formulation.\"\n",
+    "    )\n",
     "else:\n",
     "    print(\"Problem is solved successfully.\")\n",
     "    if x.value is not None:\n",
@@ -730,8 +740,10 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def solve_optimization(with_sorting=True, w1=0.6, min_capa_rates=np.array([0.0, 0.4, 0.4, 0.0])):\n",
     "\n",
+    "def solve_optimization(\n",
+    "    with_sorting=True, w1=0.6, min_capa_rates=np.array([0.0, 0.4, 0.4, 0.0])\n",
+    "):\n",
     "    # Objective weights\n",
     "    w2 = 1 - w1\n",
     "\n",
@@ -748,12 +760,18 @@
     "    emission_rate = np.array(data[\"Emission\"])\n",
     "    variable_cost = np.array(data[\"Variable_Cost\"])\n",
     "    fixed_cost = np.array(data[\"Fixed_Cost\"])\n",
-    "    sorting_interaction = np.array(data[\"Sorting_Interaction\"]) if with_sorting else np.ones_like(effectiveness)\n",
+    "    sorting_interaction = (\n",
+    "        np.array(data[\"Sorting_Interaction\"])\n",
+    "        if with_sorting\n",
+    "        else np.ones_like(effectiveness)\n",
+    "    )\n",
     "\n",
     "    max_capa_rates = np.array([1.0, 1.2, 1.2, 1.0])  # Adjustable\n",
     "\n",
     "    # Objective functions\n",
-    "    waste_reduction_func = x @ (effectiveness * co2_rate * sorting_interaction)  # CO2 avoided\n",
+    "    waste_reduction_func = x @ (\n",
+    "        effectiveness * co2_rate * sorting_interaction\n",
+    "    )  # CO2 avoided\n",
     "    co2_emissions_func = x @ emission_rate  # CO2 emitted\n",
     "    objective = w1 * waste_reduction_func - w2 * co2_emissions_func\n",
     "\n",
@@ -772,13 +790,19 @@
     "    problem.solve()\n",
     "\n",
     "    if problem.status == \"infeasible\":\n",
-    "        print(\"Problem is infeasible. Consider relaxing budget or capacity constraints.\")\n",
+    "        print(\n",
+    "            \"Problem is infeasible. Consider relaxing budget or capacity constraints.\"\n",
+    "        )\n",
     "        return None\n",
     "    elif problem.status == \"optimal_inaccurate\":\n",
-    "        print(\"Problem is solved but the solution may be inaccurate. Consider checking the results.\")\n",
+    "        print(\n",
+    "            \"Problem is solved but the solution may be inaccurate. Consider checking the results.\"\n",
+    "        )\n",
     "        return None\n",
     "    elif problem.status == \"unbounded\":\n",
-    "        print(\"Problem is unbounded. Consider adding constraints or adjusting the problem formulation.\")\n",
+    "        print(\n",
+    "            \"Problem is unbounded. Consider adding constraints or adjusting the problem formulation.\"\n",
+    "        )\n",
     "        return None\n",
     "    else:\n",
     "        if x.value is not None:\n",
@@ -794,6 +818,7 @@
     "            results_df.loc[\"Total\"] = results_df.sum(numeric_only=True)\n",
     "            return results_df.round(2)\n",
     "\n",
+    "\n",
     "def plot_results():\n",
     "    # Prepare sets of results\n",
     "    scenarios_sorting = []\n",
@@ -808,21 +833,27 @@
     "    for with_sorting in [True, False]:\n",
     "        results_df = solve_optimization(with_sorting=with_sorting)\n",
     "        if results_df is not None:\n",
-    "            scenarios_sorting.append(results_df[\"Waste Processed (tons/day)\"].values[:-1])\n",
+    "            scenarios_sorting.append(\n",
+    "                results_df[\"Waste Processed (tons/day)\"].values[:-1]\n",
+    "            )\n",
     "            labels_sorting.append(f\"Sorting={with_sorting}\")\n",
     "\n",
     "    # Generate results for different w1 values\n",
     "    for w1 in np.arange(0.4, 0.9, 0.2):\n",
     "        results_df = solve_optimization(w1=w1)\n",
     "        if results_df is not None:\n",
-    "            scenarios_weights.append(results_df[\"Waste Processed (tons/day)\"].values[:-1])\n",
+    "            scenarios_weights.append(\n",
+    "                results_df[\"Waste Processed (tons/day)\"].values[:-1]\n",
+    "            )\n",
     "            labels_weights.append(f\"w1={w1:.1f}\")\n",
     "\n",
     "    # Generate results for different minimum capacity rates\n",
     "    for min_rate in [np.array([0.0, 0.4, 0.4, 0.0]), np.array([0.0, 0.8, 0.8, 0.0])]:\n",
     "        results_df = solve_optimization(min_capa_rates=min_rate)\n",
     "        if results_df is not None:\n",
-    "            scenarios_min_rates.append(results_df[\"Waste Processed (tons/day)\"].values[:-1])\n",
+    "            scenarios_min_rates.append(\n",
+    "                results_df[\"Waste Processed (tons/day)\"].values[:-1]\n",
+    "            )\n",
     "            labels_min_rates.append(f\"MinRate={min_rate[1]:.1f}\")\n",
     "\n",
     "    # Plot for each set\n",
@@ -848,9 +879,18 @@
     "        plt.tight_layout()\n",
     "        plt.show()\n",
     "\n",
-    "    plot_single(scenarios_sorting, labels_sorting, \"Waste Allocation With/Without Sorting\")\n",
-    "    plot_single(scenarios_weights, labels_weights, \"Waste Allocation for Different w1 Values\")\n",
-    "    plot_single(scenarios_min_rates, labels_min_rates, \"Waste Allocation for Different Minimum Capacity Rates\")\n",
+    "    plot_single(\n",
+    "        scenarios_sorting, labels_sorting, \"Waste Allocation With/Without Sorting\"\n",
+    "    )\n",
+    "    plot_single(\n",
+    "        scenarios_weights, labels_weights, \"Waste Allocation for Different w1 Values\"\n",
+    "    )\n",
+    "    plot_single(\n",
+    "        scenarios_min_rates,\n",
+    "        labels_min_rates,\n",
+    "        \"Waste Allocation for Different Minimum Capacity Rates\",\n",
+    "    )\n",
+    "\n",
     "\n",
     "plot_results()"
    ]
